Start adding repository management UI
